<resources>
    <string name="app_name">BIXIRI</string>
    <string name="content_description">test</string>
    <string name="main_button_time">시간표 설정</string>
    <string name="main_button_map">맛집 탐색</string>
    <string name="main_textview_subway_arrival">지하철 도착시간</string>
    <string name="main_textview_bus_arrival">버스 도착시간</string>
    <string name="main_textview_menu">식단</string>
    <string name="main_textview_weather">날씨</string>
    <string name="main_textview_wol">컴퓨터 원격 켜기</string>
    <string name="recyclerview_item_arrival">%s: %s 후 도착</string>
    <string name="recyclerview_item_menu">%s: %s</string>
    <string name="op1_toolbar_title">대중교통 도착시간</string>
    <string name="op1_departure_station">출발역</string>
    <string name="op1_arrival_station">도착역</string>
    <string name="op1_arrival_station_exception">도착역은 같은 노선에 있는 역을 선택해야 합니다</string>
    <string name="op1_busRoute">버스노선</string>
    <string name="op1_busStop">버스정류장</string>
    <string name="op1_busRoute_exception">버스정류장을 선택해주세요</string>
    <string name="recyclerview_item_subway_arrival_title">현재위치: %s</string>
    <string name="recyclerview_item_subway_arrival_content1">%s행, %s 후 도착</string>
    <string name="recyclerview_item_bus_arrival_title">현재위치: %s</string>
    <string name="recyclerview_item_bus_arrival_content1">%s, %s, %s 후 도착 [%d정거장 전]</string>
    <string name="op4_wol_on">전원 켜기</string>
    <string name="op4_toolbar_title">원격 전원 켜기</string>
    <string name="op4_wol_toast">WOL 패킷을 전송했습니다</string>
    <string name="recyclerview_item_wol_profile_title">%s</string>
    <string name="recyclerview_item_wol_profile_content1">%s, %d</string>
    <string name="wol_profile_hint_name">이름</string>
    <string name="wol_profile_hint_ip">IP 주소</string>
    <string name="wol_profile_hint_mac">MAC 주소</string>
    <string name="wol_profile_hint_port">Port 번호</string>
    <string name="wol_profile_commit">저장</string>
    <string name="popupmenu_wol_item_favorite">즐겨찾기</string>
    <string name="popupmenu_wol_item_delete">삭제</string>
    <string name="popupmenu_wol_item_edit">편집</string>
    <!-- 초기 실행 시 기본값 -->
    <string name="default_departure_station">홍대입구</string>
    <string name="default_arrival_station">동대문역사문화공원</string>
    <string name="default_busRoute">273</string>
    <string name="default_busStop">홍익대학교</string>
    <string name="default_busRouteId">100100049</string>
    <string name="default_busStId">113000142</string>
    <string name="default_busOrg">55</string>
    <!-- 도착 데이터를 표시하기 위한 옵션, 현재 보류중 -->
    <string name="recyclerview_item_subway_arrival_content2">%s행, 도착시간: %s</string>
    <string name="info1">출발역과 도착역을 같게 설정하면 모든 도착 데이터가 표시됩니다</string>
    <string name="info2">서울시 이외의 역구간은 미제공 됩니다. (예. 광명, 서동탄, 춘천 등)</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_maps">Map</string>
</resources>