<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:theme="@style/Theme.Material">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_wolProfile_name"
        android:hint="@string/wol_profile_hint_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Theme.Material.Outline_Text">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_wolProfile_ip"
        style="@style/Theme.Material.Outline_Text"
        android:hint="@string/wol_profile_hint_ip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField_wolProfile_name">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textShortMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_wolProfile_mac"
        style="@style/Theme.Material.Outline_Text"
        android:hint="@string/wol_profile_hint_mac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField_wolProfile_ip">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textCapCharacters|textShortMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_wolProfile_port"
        style="@style/Theme.Material.Outline_Text"
        android:hint="@string/wol_profile_hint_port"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField_wolProfile_mac">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/outlinedBtn_wolProfile"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/wol_profile_commit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField_wolProfile_port" />
</androidx.constraintlayout.widget.ConstraintLayout>