<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:theme="@style/Theme.Material">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout_op1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar_op1"
            style="@style/MaterialToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/top_app_bar"
            app:title="@string/op1_toolbar_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout_op1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_op1_station_select"
                style="@style/Theme.Material.Card_List"
                android:layout_marginBottom="0dp">

                <LinearLayout
                    android:id="@+id/linearlayout_op1_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="?android:dividerHorizontal"
                    android:orientation="vertical"
                    android:showDividers="middle">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintlayout_op1_departure_station"
                        style="@style/Theme.Material.Op1_Container">

                        <ImageView
                            android:id="@+id/imageview_op1_departure_station"
                            style="@style/Theme.Material.Op1_Icon"
                            android:contentDescription="@string/op1_directions_subway"
                            app:srcCompat="@drawable/ic_directions_subway_24dp" />

                        <TextView
                            android:id="@+id/textview_op1_departure_station_description"
                            style="@style/Theme.Material.Op1_Title"
                            android:text="@string/op1_departure_station"
                            app:layout_constraintStart_toEndOf="@+id/imageview_op1_departure_station" />

                        <TextView
                            android:id="@+id/textview_op1_departure_station_selected"
                            style="@style/Theme.Material.Op1_Content"
                            android:text="@string/default_departure_station"
                            app:layout_constraintStart_toEndOf="@+id/imageview_op1_departure_station" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintlayout_op1_arrival_station"
                        style="@style/Theme.Material.Op1_Container">

                        <ImageView
                            android:id="@+id/imageview_op1_arrival_station"
                            style="@style/Theme.Material.Op1_Icon"
                            android:contentDescription="@string/op1_directions_subway"
                            app:srcCompat="@drawable/ic_directions_subway_24dp" />

                        <TextView
                            android:id="@+id/textview_op1_arrival_station_description"
                            style="@style/Theme.Material.Op1_Title"
                            android:text="@string/op1_arrival_station"
                            app:layout_constraintStart_toEndOf="@+id/imageview_op1_arrival_station" />

                        <TextView
                            android:id="@+id/textview_op1_arrival_station_selected"
                            style="@style/Theme.Material.Op1_Content"
                            android:text="@string/default_arrival_station"
                            app:layout_constraintStart_toEndOf="@+id/imageview_op1_arrival_station" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_op1_bus_select"
                style="@style/Theme.Material.Card_List"
                android:layout_marginBottom="0dp">

                <LinearLayout
                    android:id="@+id/linearlayout_op1_bus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="?android:dividerHorizontal"
                    android:orientation="vertical"
                    android:showDividers="middle">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintlayout_op1_busRoute"
                        style="@style/Theme.Material.Op1_Container">

                        <ImageView
                            android:id="@+id/imageview_op1_busRoute"
                            style="@style/Theme.Material.Op1_Icon"
                            android:contentDescription="@string/op1_directions_subway"
                            app:srcCompat="@drawable/ic_directions_bus_24dp" />

                        <TextView
                            android:id="@+id/textview_op1_busRoute"
                            style="@style/Theme.Material.Op1_Title"
                            android:text="@string/op1_busRoute"
                            app:layout_constraintStart_toEndOf="@+id/imageview_op1_busRoute" />

                        <TextView
                            android:id="@+id/textview_op1_busRouteSeleted"
                            style="@style/Theme.Material.Op1_Content"
                            android:text="@string/default_busRoute"
                            app:layout_constraintStart_toEndOf="@+id/imageview_op1_busRoute" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintlayout_op1_busStop"
                        style="@style/Theme.Material.Op1_Container">

                        <ImageView
                            android:id="@+id/imageview_op1_busStop"
                            style="@style/Theme.Material.Op1_Icon"
                            android:contentDescription="@string/op1_directions_subway"
                            app:srcCompat="@drawable/ic_directions_bus_24dp" />

                        <TextView
                            android:id="@+id/textview_op1_busStop"
                            style="@style/Theme.Material.Op1_Title"
                            android:text="@string/op1_busStop"
                            app:layout_constraintStart_toEndOf="@+id/imageview_op1_busStop" />

                        <TextView
                            android:id="@+id/textview_op1_busStopSelected"
                            style="@style/Theme.Material.Op1_Content"
                            android:text="@string/default_busStop"
                            app:layout_constraintStart_toEndOf="@+id/imageview_op1_busStop" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_op1_busResult"
                style="@style/Theme.Material.Card_List"
                android:layout_marginBottom="0dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_op1_busResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_op1_subway_result"
                style="@style/Theme.Material.Card_List"
                android:layout_marginBottom="0dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_op1_subway_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_op1_subway_result2"
                style="@style/Theme.Material.Card_List"
                android:layout_marginBottom="0dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_op1_subway_result2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>